# proof

./: LICENSE  README.md
backend/: Makefile  README.md  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
backend/data/: goodreads_library_export.csv
backend/notebooks/: notebook.ipynb
backend/proof/: __init__.py  api.py
backend/test/: test_placeholder.py
backend/tools/: run.py
backend/tools/config/: api.yaml
deploy/: README.md  deploy.sh  dev-start-instructions.txt  install-dependencies.sh  start-tasks-dev.sh
