[metadata]
name = proof
version = x.x.x
description = Personal project to visualize Goodreads user data.

[options]
packages = find:
python_requires = >=3.10.*
install_requires =
    colorama

[options.packages.find]
include =
    proof
    proof.*

[build-system]
requires =
    setuptools
    wheel
